# agent-unity

./: .gitignore  CHANGELOG  CHANGELOG.md  LICENSE  README.md  build.py  init.sh  package.json  run.sh
.github/workflows/: check-format.yml  check-lint.yml  check-pr.yml  check-version.yml  deploy-unity3d-package.yml
Runtime/: Agent.cs  Identity.cs  Principal.cs  shikulabs.ic-agent.Runtime.asmdef
Samples/1_SamplesIdentity/: basic.pem
Samples/2_SamplesAgent/: 2_SamplesAgent.unity  secp256k1.pem
Tests/Runtime/: AgentTest.cs  PrincipalTest.cs
agent/: Cargo.toml
agent/examples/agent-test/: main.rs
agent/src/: lib.rs
agent/src/ic_helper/: mod.rs
com.shikulab.ic-agent/: package.json
com.shikulab.ic-agent/Runtime/: shikulabs.ic-agent.Runtime.asmdef
exp-cs/: .gitignore  Program.cs  exp-cs.csproj
ic-agent-backend/: Cargo.toml
ic-agent-ffi/: .gitignore  Cargo.toml
ic-agent-ffi/examples/: lab.rs  laboratory.rs
ic-agent-ffi/examples/agent-sample/: main.rs
ic-agent-ffi/src/: lib.rs
ic-agent-ffi/src/_host_deprecated/: keystore.rs
ic-agent-ffi/src/agent/: http_agent.rs  mod.rs  proxy_agent.rs
ic-agent-ffi/src/candid/: idl_args.rs  idl_value.rs  mod.rs
ic-agent-ffi/src/ffi/: mod.rs
ic-agent-ffi/src/ffi/ic_types_ffi/: mod.rs
ic-agent-ffi/src/host/: keystore.rs  mod.rs
ic-agent-ffi/src/ic_agent_export/agent/: builder.rs  mod.rs
ic-agent-ffi/src/ic_helper/: mod.rs
ic-agent-ffi/src/identity/: mod.rs
ic-agent-ffi/src/principal/: mod.rs
ic-agent-frontend/: .gitignore
package-template/: package.json
plugin-unity/: .gitignore
scripts/: README.md  build-cross.sh  build-native.sh  build.py  build.sh  check-version.py  clean.py  get-long-opt.py  pack.py  publish.py  requirements.txt  test.py
(+28 files in other folders)
