[package]
name = "agent"
description = "The core party of agent-unity"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
# dfinity
candid = "0.7.*"
ic-types = "0.3.*"
ic-agent = "0.16.*"
# serde
serde = "1.0.*"
serde_json = "1.0.*"
serde_derive = "1.0.*"
# encrypt
ring = "0.16.*"
base64 = "0.13.0"
rust-argon2 = "1.0.0"
chacha20poly1305 = { version = "0.9.0", features = ["std"] }
# helper
anyhow = "1.0.*"
#uuid = { version = "1.1.*", features = ["v4", "serde"] }
lazy_static = "1.4.*"
chrono = { version = "0.4.*", features = ["serde"] }
# ffi
libc = "0.2"

[features]
default = []