[package]
name = "ic-agent-ffi"
description = "The backend of agent-unity"
version = "0.1.0-beta-pre"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[package.metadata.cross.target.x86_64-apple-darwin]
image = "ghcr.io/shikulabs/x86_64-apple-darwin-cross:custom"

[package.metadata.cross.target.aarch64-apple-darwin]
image = "ghcr.io/shikulabs/aarch64-apple-darwin-cross:custom"

[dependencies]
# dfinity
candid = "=0.7.14"
ic-types = "0.3"
ic-agent = "0.16"
ic-utils = "0.16"
# async runtime
futures = "0.3"
tokio = { version = "1.18", features = ["full"] }
# serde
serde = "1.0.*"
serde_json = "1.0.*"
serde_derive = "1.0.*"
# encrypt
ring = "0.16.*"
base64 = "0.13.0"
rust-argon2 = "1.0.0"
chacha20poly1305 = { version = "0.9.0", features = ["std"] }
# helper
hex = "0.4"
anyhow = "1.0.*"
lazy_static = "1.4.*"
chrono = { version = "0.4.*", features = ["serde"] }
garcon = { version = "0.2.3", features = ["async"] }
# ffi
libc = "0.2"

[features]
default = []